# bible_bot

./: .gitignore  pyproject.toml
app/: deutertocanonical.py  help.py  keep_alive.py  main.py  models.py
data/: references.json  translations.json
