[tool.poetry]
name = "bible-bot"
version = "0.1.0"
description = "Discord bot for printing bible verses."
authors = ["Michal Fluder <fludermichal@gmail.com>"]
packages = [{ include = "app"}]

[tool.poetry.dependencies]
python = "3.10.5"
discord-py-interactions = "^4.2.1"
httpx = "^0.22.0"
lexicon = "^2.0.1"
rich = "^12.0.1"
pydantic = "^1.9.0"
